@@ -1,3 +1,8 @@
+Wed Aug 30 10:37:00 BST 2000 Olly Betts
+
+	* tests/Makefile.am: use CXXCOMPILE and LTCXXCOMPILE for compiling
+	  with extra CXXFLAGS.
+
 Tue Aug 29 19:22:52 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Partially implemented the new indexer interface
